# aoc-2024-rs

./: Cargo.toml  README.md  sad
.github/workflows/: ci.yml
data/examples/: 14.txt  19.txt
src/: lib.rs  main.rs
src/template/commands/: all.rs
